src/objects/APTS_CTC_Scenarios__mdt.object
<CustomObject>
    <fields>
        <fullName>APTS_Conversion__c</fullName>
        <label>Conversion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_New_Contract__c</fullName>
        <label>New Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Old_Contract__c</fullName>
        <label>Old Contract</label>
        <type>TextArea</type>
    </fields>
    <label>APTS_CTC_Scenarios</label>
    <pluralLabel>ctcScenarios</pluralLabel>
</CustomObject>